# ContextGraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
fixtures/: class_with_methods.py  simple_module.py
fixtures/package_example/: __init__.py  core.py  utils.py
hooks/: claude_post_edit.sh  post_commit.sh
src/context_graph/: __init__.py  api.py  capsule.py  db.py  graph.py  indexer.py  indexer_swift.py  models.py  observations.py  resume.py  skeletonizer.py  tokens.py  watcher.py
tests/: conftest.py  test_api.py  test_capsule.py  test_db.py  test_graph.py  test_indexer.py  test_observations.py  test_resume.py  test_skeletonizer.py  test_watcher.py
